--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -7,7 +7,7 @@
   </li>
 </ul>
 
-<div *ngIf="selectedHero">
+<!-- <div *ngIf="selectedHero">
 
   <h2>{{selectedHero.name | uppercase}} Details </h2>
   <div>
@@ -25,6 +25,6 @@
     </div>
   </div>
 
-</div>
+</div> -->
 
-<!-- <app-hero-detail [hero]="selectedHero"></app-hero-detail> -->
+<app-hero-detail [hero]="selectedHero"></app-hero-detail>
