--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,8 +1,7 @@
 <h2>My Heroes</h2>
 <ul class="heroes">
-  <li *ngFor="let hero of heroes" 
-    [class.selected]  ="hero == selectedHero"
-    (click)="onSelect(hero)">
+  <li *ngFor="let hero of heroes">
+    <a routerLink="/detail/{{hero.id}}"></a>
     <span class="badge">{{hero.id}} </span> {{hero.name}}
   </li>
 </ul>
@@ -27,4 +26,4 @@
 
 </div> -->
 
-<app-hero-detail [hero]="selectedHero"></app-hero-detail>
+<!-- <app-hero-detail [hero]="selectedHero"></app-hero-detail> -->
