--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -7,8 +7,9 @@
 
     <div>
         <label for="hero-name">Hero name: </label>
-        <input id="hero-name" [(ngModel)]="hero.name" placeholder="name">
+        <input id="hero-name" [(ngModel)]="hero.name" placeholder="Enter hero name...">
     </div>
     
     <button (click)="goBack()">go back</button>
+    <button (click)="save()">save</button>
 </div>
